# goopenbot

./: .gitignore  README.md  goopenbot.py  index.html  index.js  pyproject.toml
src/goopenbot/: __init__.py  __main__.py  main.py
src/goopenbot/commands/: __init__.py  agent.py  models.py  run.py  session.py
src/goopenbot/core/: __init__.py  config.py  provider.py  session.py
src/goopenbot/tools/: __init__.py  base.py  bash.py  edit.py  glob.py  grep.py  read.py  write.py
tests/: test_goopenbot.py
